--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^15.4.1",
     "react-addons-pure-render-mixin": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-loading": "0.0.9",
     "react-router": "^3.0.0",
     "simpl-schema": "0.0.3"
   },
